--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,10 +121,12 @@ ul {
 }
 
 .section-title h2 span {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	padding: 0 3px 5px;
 	display: inline-block;
-	color: #0b1033;
+	/*color: #0b1033;*/
+	color: #fff;
 }
 
 .section-title:after {
@@ -135,7 +137,8 @@ ul {
 	width: 5px;
 	height: 30px;
 	margin-left: -2.5px;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .section-title.left {
@@ -158,10 +161,12 @@ ul {
 .site-btn {
 	font-family: "Oswald", sans-serif;
 	font-size: 15px;
-	color: #641fb1;
+	/*color: #641fb1;*/
+	color: #fff;
 	display: inline-block;
 	text-transform: uppercase;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	padding: 15px 50px;
 	font-weight: 500;
 	letter-spacing: 1px;
@@ -171,15 +176,18 @@ ul {
 }
 
 .site-btn.btn-2 {
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	color: #fff;
 	font-weight: 400;
 }
 
 .site-btn.btn-3 {
 	background: transparent;
-	color: #6a23b5;
-	border: 1px solid #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
+	/*border: 1px solid #6a23b5;*/
+	border: 1px solid #f16436;
 	padding: 14px 50px;
 }
 
@@ -302,7 +310,8 @@ ul {
 
 .header-section .menu-list li a:hover,
 .header-section .menu-list li a.active {
-	color: #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
 }
 
 .header-section .menu-list li:last-child a {
@@ -310,8 +319,9 @@ ul {
 }
 
 .header-section .menu-list li.active a {
-	background: #2be6ab;
-	color: #6a23b5;
+	/*background: #2be6ab;*/
+	background: #2559A6;
+	color: #fff;
 }
 
 .header-section .menu-list .current a:after {
@@ -360,7 +370,8 @@ ul {
 	display: inline-block;
 	height: 50px;
 	width: 100px;
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	color: #fff;
 	text-align: center;
 	padding-top: 10px;
@@ -370,7 +381,8 @@ ul {
 
 .owl-carousel .owl-nav .owl-prev:hover,
 .owl-carousel .owl-nav .owl-next:hover {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .owl-carousel .owl-nav .owl-next {
@@ -381,7 +393,8 @@ ul {
 	width: 0%;
 	max-width: 100%;
 	height: 4px;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .owl-carousel #progressBar {
@@ -391,13 +404,25 @@ ul {
 	z-index: 1;
 }
 
+.owl-carousel .item:before {
+	content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 3;
+}
 
 /*------------------------
 	About section
 --------------------------*/
 .about-section,
 .team-section {
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	position: relative;
 	z-index: 2;
 }
@@ -461,7 +486,8 @@ ul {
 }
 
 .lab-card:hover {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .lab-card:hover h2,
@@ -500,8 +526,10 @@ ul {
 	top: 50%;
 	margin-left: -30px;
 	margin-top: -30px;
-	color: #6a23b5;
-	background: #2be6ab;
+	/*color: #6a23b5;*/
+	color: #fff;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	border-radius: 50%;
 	text-align: center;
 	padding-top: 20px;
@@ -514,7 +542,8 @@ ul {
 --------------------------*/
 .testimonial-section {
 	padding-top: 320px;
-	background: #220c3b;
+	/*background: #220c3b;*/
+	background: #2559A6;
 	position: relative;
 }
 
@@ -533,7 +562,8 @@ ul {
 	display: block;
 	font-family: "Roboto", sans-serif;
 	font-size: 48px;
-	color: #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
 }
 
 .testimonial p {
@@ -602,7 +632,8 @@ ul {
 	content: "";
 	width: 28px;
 	height: 28px;
-	border: 2px solid #6a23b5;
+	/*border: 2px solid #6a23b5;*/
+	border: 2px solid #f16436;
 	border-radius: 40px;
 	left: -10px;
 	top: -10px;
@@ -615,7 +646,8 @@ ul {
 }
 
 #testimonial-slide .owl-dots .owl-dot.active {
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	margin-bottom: 25px;
 	margin-top: 25px;
 }
@@ -714,7 +746,8 @@ ul {
 
 .member h3 {
 	font-size: 14px;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	font-weight: 400;
 	text-transform: uppercase;
 }
@@ -724,7 +757,8 @@ ul {
 	Promotion section
 --------------------------*/
 .promotion-section {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	padding: 115px 0;
 }
 
@@ -762,7 +796,8 @@ ul {
 	height: 100%;
 	right: -15px;
 	top: 0;
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	z-index: -1;
 }
 
@@ -828,7 +863,8 @@ ul {
 
 .contact-info h3 {
 	font-weight: 400;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	margin-bottom: 20px;
 }
 
@@ -846,7 +882,8 @@ ul {
 }
 
 .footer-section h2 {
-	color: #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
 	font-size: 14px;
 	padding: 18px 0;
 }
@@ -861,7 +898,8 @@ ul {
 .page-top-section {
 	position: relative;
 	height: 405px;
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 }
 
 .page-top-section .container {
@@ -902,7 +940,8 @@ ul {
 .page-top-section .page-info .page-links span {
 	margin-right: 0;
 	padding-right: 0;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 }
 
 .page-top-section .page-info .page-links span:after {
@@ -914,7 +953,8 @@ ul {
 	Features Section
 --------------------------*/
 .features .icon-box .icon {
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	margin-top: -10px;
 }
 
@@ -949,7 +989,8 @@ ul {
 	left: 0;
 	top: 0;
 	z-index: 1;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	opacity: 0;
 	-webkit-transition: all 0.4s ease 0s;
 	-o-transition: all 0.4s ease 0s;
@@ -981,7 +1022,8 @@ ul {
 	Newsletter Section
 --------------------------*/
 .newsletter-section {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .newsletter-section h2 {
@@ -1054,7 +1096,8 @@ ul {
 	position: absolute;
 	width: 90px;
 	height: 90px;
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	top: 17px;
 	left: 17px;
 	text-align: center;
@@ -1070,7 +1113,8 @@ ul {
 
 .post-thumbnail .post-date h3 {
 	font-size: 15px;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	font-weight: 400;
 }
 
@@ -1101,7 +1145,8 @@ ul {
 	height: 7px;
 	left: 0;
 	top: 3px;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	border-radius: 10px;
 }
 
@@ -1127,7 +1172,8 @@ ul {
 	height: 3px;
 	left: 0;
 	bottom: 0;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	border-radius: 10px;
 }
 
@@ -1141,7 +1187,8 @@ ul {
 }
 
 .page-pagination a.active {
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 /* Sidebar */
@@ -1167,7 +1214,8 @@ ul {
 }
 
 .widget-item ul li a:hover {
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 }
 
 .widget-item ul li:last-child a {
@@ -1191,7 +1239,8 @@ ul {
 
 .widget-item ul.tag li {
 	display: inline-block;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	padding: 10px 24px;
 	float: left;
 	margin-right: 10px;
@@ -1199,13 +1248,15 @@ ul {
 }
 
 .widget-item ul.tag li a {
-	color: #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
 	margin-bottom: 0;
 }
 
 .widget-item .quote .quotation {
 	display: block;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	font-size: 60px;
 	line-height: normal;
 	margin-bottom: -20px;
@@ -1218,7 +1269,8 @@ ul {
 .search-form input[type="text"] {
 	width: 100%;
 	border: none;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 	padding: 15px 20px;
 }
 
@@ -1235,8 +1287,10 @@ ul {
 	right: 0;
 	top: 0;
 	border: 0;
-	background: #6a23b5;
-	color: #2be6ab;
+	/*background: #6a23b5;*/
+	background: #f16436;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 }
 
 .search-form .search-btn:focus,
@@ -1355,7 +1409,8 @@ ul {
 	height: 100%;
 	left: 0;
 	top: 0;
-	background: #2be6ab;
+	/*background: #2be6ab;*/
+	background: #2559A6;
 }
 
 .bar-inner span {
@@ -1378,7 +1433,8 @@ ul {
 }
 
 .site-accordions .panel-heading {
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 	color: #fff;
 	position: relative;
 	padding: 16px 50px;
@@ -1418,17 +1474,21 @@ ul {
 }
 
 .site-accordions .panel.active .panel-heading {
-	background: #2be6ab;
-	color: #6a23b5;
+	/*background: #2be6ab;*/
+	background: #2559A6;
+	/*color: #6a23b5;*/
+	color: #fff;
 }
 
 .site-accordions .panel.active .panel-heading a {
-	background: #6a23b5;
+	/*background: #6a23b5;*/
+	background: #f16436;
 }
 
 .site-accordions .panel.active .panel-heading a:after {
 	content: "-";
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	left: 23px;
 	padding-top: 13px;
 }
@@ -1467,7 +1527,8 @@ ul {
 
 .facts .fact .icon {
 	margin-right: 20px;
-	color: #6a23b5;
+	/*color: #6a23b5;*/
+	color: #f16436;
 	font-size: 45px;
 	padding-top: 10px;
 }
@@ -1475,7 +1536,8 @@ ul {
 .facts .fact .fact-text h2 {
 	font-family: "Roboto", sans-serif;
 	font-size: 72px;
-	color: #2be6ab;
+	/*color: #2be6ab;*/
+	color: #2559A6;
 	font-weight: 600;
 	margin-bottom: 5px;
 }
