Aplicando font-swap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ html,
 body {
 	height: 100%;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 }
 
 img {
@@ -26,6 +27,7 @@ h4,
 h5,
 h6 {
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	padding: 0;
 	margin: 0;
 }
@@ -39,6 +41,7 @@ p {
 	color: #6c6e7e;
 	line-height: 30px;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 }
 
 a:hover,
@@ -160,6 +163,7 @@ ul {
 
 .site-btn {
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	font-size: 15px;
 	/*color: #641fb1;*/
 	color: #fff;
@@ -313,6 +317,7 @@ ul {
 	color: #222;
 	position: relative;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	font-size: 15px;
 	letter-spacing: 0.09em;
 	-webkit-transition: all 0.4s ease 0s;
@@ -589,6 +594,7 @@ ul {
 .testimonial span {
 	display: block;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	font-size: 48px;
 	/*color: #6a23b5;*/
 	color: #f16436;
@@ -1192,6 +1198,7 @@ ul {
 
 .read-more {
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	font-size: 16px;
 	color: #0b1033;
 	position: relative;
@@ -1216,6 +1223,7 @@ ul {
 .page-pagination a {
 	display: inline-block;
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	font-size: 16px;
 	color: #0b1033;
 	padding: 6px 10px;
@@ -1395,6 +1403,7 @@ ul {
 .comment-list li .commetn-text h3 {
 	font-size: 15px;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	margin-bottom: 30px;
 	font-weight: 600;
 }
@@ -1427,6 +1436,7 @@ ul {
 
 .single-progress-item p {
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	color: #333;
 	margin-bottom: 12px;
 	font-weight: 500;
@@ -1455,6 +1465,7 @@ ul {
 	font-weight: bold;
 	top: -35px;
 	font-family: "Oswald", sans-serif;
+	font-display: swap;
 	color: #333;
 	font-weight: 500;
 }
@@ -1481,6 +1492,7 @@ ul {
 .site-accordions .panel-heading .panel-title {
 	font-size: 15px;
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	text-transform: none;
 	margin: 0;
 	-webkit-transition: all 0.4s ease 0s;
@@ -1549,6 +1561,7 @@ ul {
 
 .circle-progress .progress-info p {
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	color: #7c8d93;
 	font-size: 14px;
 	font-weight: 600;
@@ -1571,6 +1584,7 @@ ul {
 
 .facts .fact .fact-text h2 {
 	font-family: "Roboto", sans-serif;
+	font-display: swap;
 	font-size: 72px;
 	/*color: #2be6ab;*/
 	color: #2559A6;
