--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,7 +465,7 @@ ul {
 	left: 0;
 	top: 0;
 	/*z-index: 3;*/
-	background-image: url("../img/overlay.png");
+	background-image: url("../img/overlay.webp");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
